fix chat layout on mobile

--- a/ui/dashboard/src/styles/custom.scss
+++ b/ui/dashboard/src/styles/custom.scss
@@ -42,6 +42,9 @@ nav {
 .panel-heading {
     overflow: visible !important;
 }
+#board {
+    box-shadow: 0 0.5em 1em -0.125em black
+}
 #topbar {
     border-top: none;
 }
